CoCors change, tag version change